<resources>
    <string name="app_name">TechnicalTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="price_label">%1$s $</string>
    <string name="error_message">an error occurred</string>
    <string name="no_product_message">No Product</string>
    <string name="take_a_picture">Take a Picture</string>

    <!-- Product details screen -->
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discountPercentage">DiscountPercentage</string>
    <string name="rating">Rating</string>
    <string name="stock">Stock</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
</resources>